# total-battle-brothers-for-wesnoth

./: .gitignore  BACKLOG-ARCHIVE.md  BACKLOG.md  LICENSE  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN.md
game/: project.godot
game/scripts/: snapshot_model.gd
game/tests/: test_exit_code.gd  test_snapshot_model.gd
scripts/: build.sh  run.sh  smoke.sh  test.sh
src/tbb/: __init__.py  __main__.py  ai.py  battle.py  battlefield.py  building.py  combat.py  driver.py  duchy.py  game.py  hex.py  party.py  progression.py  resources.py  rng.py  settlement.py  terrain.py  turn.py  unit.py  world.py  wound.py
src/tbbbridge/: __init__.py  __main__.py  persist.py  protocol.py  session.py  snapshot.py  test_main.py  test_persist.py  test_protocol.py  test_session.py
tests/: godot_runner.py  test_ai.py  test_battle.py  test_battlefield.py  test_battlereport.py  test_battlesvg.py  test_building.py  test_combat.py  test_driver.py  test_duchy.py  test_economyalert.py  test_engagementpreview.py  test_game.py  test_gamepage.py  test_godot_bootstrap.py  test_godot_snapshot_fixture.py  test_godot_snapshot_model.py  test_godot_test_harness.py  test_herochase.py  test_herolocator.py  test_hex.py  test_hexgeom.py  test_layout.py  test_nextobjective.py  test_orderlog.py  test_ownerlegend.py  test_palette.py  test_party.py  test_partypanel.py  test_playersummary.py  test_progression.py  test_recommendedaction.py  test_resources.py  test_rng.py  test_serve.py  test_session.py  test_settlement.py  test_settlementpanel.py  test_situationreport.py  test_smoke.py  (+14 more)
(+29 files in other folders)
