[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tbb"
version = "0.0.1"
description = "Total Battle Brothers — turowa strategia sandbox (rdzeń logiki)"
readme = "docs/DESIGN.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Dzięki temu `import tbb` działa bez instalacji pakietu.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
